# tracker

./: .mcp.json  CLAUDE.md  MCP_SERVERS.md  README.md  package-lock.json  package.json  test-diet-api.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh
src/: App.css  App.tsx  CLAUDE.md  db.ts  diet.ts  index.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/: CLAUDE.md  migrations.rs  mod.rs
src-tauri/src/diet/: CLAUDE.md  commands.rs  mod.rs  models.rs
src-tauri/tests/: diet_tests.rs
src/diet/: CLAUDE.md  index.ts
